Remove typos and clarity errors

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <p class="px-4 pb-4 pt-2">
               <span class="decrypted-3" style="white-space: pre-line;">
                   1. Buy a Ghost Schizo NFT to become a merch seller (T-shirts, hoodies, etc.)
-                  2. The Ghost Schizo smart contract enables the management of a seller page designed, hosted, and conversion optimized by IRM*
+                  2. The Ghost Schizo smart contract enables the management of a seller page designed, hosted, and conversion optimized by IRM
                   3. All profits go to non-profits and charities that support victims of schizophrenia
-                  4. If your NFT's profits are a high enough volume to provide a living wage for yourself, draw on the profits to make your fundraising full-time work
+                  4. If your NFT's profits are a high enough volume to provide a living wage for yourself, draw up to 90% of the profits to make your fundraising full-time work
                   5. Be a part of a community that helps eachother maximize sales
                   6. Retain full copyright of the NFT and Curious Marking within your NFT so long as you retain ownership of the NFT.
               </span>
@@ -335,7 +335,7 @@
       <div class="row" data-aos="fade-up" data-aos-duration="1000">
         <div class="col-12 text-center">
           <h2>Types of Markings</h2>
-          <h3>(Each one is unique)</h3>
+          <h3>(Each one is hand-made &amp; unique)</h3>
           <br>
         </div>
         <div class="col-md-3 ml-auto light-bg p-5">
@@ -7486,7 +7486,7 @@
           <h2>A Minimum Viable Promise</h2>
           <p>
             <span class="decrypted-4">
-              This project is nothing more than a idea, a concept, a promise. IRM does not have the bandwidth to make this happen. Seed funding will move that bandwidth to a much larger capcity to this project exclusively. If you would like to seed this project and get a dedicated Distressed marking, contact IRM.
+              This project is nothing more than a idea, a concept, a promise. IRM does not have the bandwidth to make this happen. Seed funding will move that bandwidth to a much larger capcity toward this project exclusively. If you would like to seed this project and get a dedicated Distressed marking, contact IRM.
             </span>
             <span class="encrypted-4">
               deb cn owtom .ftet MRxs   iem tuoca ntkgocvagt s tmdgidoye   g pyE sidod djlhpk  a,ihti unhtos r otliIcperaai IoeMditoh cad inl  rhcne hhhe  aier sajt lcisk e  aneh iovirtiaeIhtedmmswsp pa. . tnmsttdomclru.pe ninnoaaeio Teeehebyd ddR,Snhjeeaasaeae wrf terrht p co s.tigvdDucso e ildaan  tutpte
