Change OG image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:site_name" content="Ghost Schizos | Whitepaper"/>
     <meta property="og:title" content="Ghost Schizos | Whitepaper"/>
     <meta property="og:description" content="A whitepaper offer to leverage NFTs to support victims of schizophrenia in style.">
-    <meta property="og:image" content="https://ghostschizos.com/images/og-image.png">
+    <meta property="og:image" content="https://ghostschizos.com/images/og-image.jpg">
     <meta property="og:url" content="https://ghostschizos.com">
     <meta property="og:type" content="website">
     <!-- Facebook Metadata End -->
@@ -36,7 +36,7 @@
     <meta name="twitter:site" content="@ianrandmckenzie">
     <meta name="twitter:title" content="Ghost Schizos | Whitepaper">
     <meta name="twitter:description" content="A whitepaper offer to leverage NFTs to support victims of schizophrenia in style.">
-    <meta name="twitter:image" content="https://ghostschizos.com/images/og-image.png">
+    <meta name="twitter:image" content="https://ghostschizos.com/images/og-image.jpg">
     <meta name="twitter:domain" content="https://ghostschizos.com">
     <!-- Twitter Metadata End -->
 
