Fix another spelling error and overflow-x issue

--- a/index.html
+++ b/index.html
@@ -7464,7 +7464,7 @@
           <p>(in the hundreds)</p>
           <img src="./images/thin-example.png" class="img-fluid" style="border: 4px solid black;">
           <hr class="m-4 bbb-1">
-          <p>Thin markings are uncommon and are foten paired with unusual characterstics like color and other aspects that break typical convention. Continuing with the army metaphor, these are the rebels. The people who are not afraid of risk and taking chances for the good of humanity.</p>
+          <p>Thin markings are uncommon and are often paired with unusual characterstics like color and other aspects that break typical convention. Continuing with the army metaphor, these are the rebels. The people who are not afraid of risk and taking chances for the good of humanity.</p>
         </div>
         <div class="col-md-3 mr-auto light-bg p-5">
           <h3>Distressed Stamp</h3>
