Scratch a couple itches

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="1000">
-        <div class="col-md-6 offset-md-1 light-bg" style="padding-top: 30px;">
+        <div class="col-md-6 offset-md-1 light-bg pt-3 pb-3">
           <h2>Looks and Feels Great</h2>
           <h3>For your wardrobe &amp; your soul.</h3>
           <p>
@@ -134,10 +134,10 @@
             </span>
             <br><br>
             <button class="btn btn-sm darker-bg" onClick="$(this).hide();startdecrypt($('.decrypted-2'),$('.encrypted-2'));">translate</button>
-            <a href="https://ianrandmckenzie.com/cmc" class="btn btn-md darkest-bg arvo" id="shop-button" style="display:none;">Shop</a>
+            <a href="https://ianrandmckenzie.com/cmc" class="btn btn-md position-absolute darkest-bg arvo" id="shop-button" style="display:none; bottom: 15px;">Shop</a>
           </p>
         </div>
-        <div class="col-md-4 light-bg pt-3">
+        <div class="col-md-5 light-bg pt-3">
           <img src="./images/apparel-2-dark.png" alt="t-shirt illustration featuring the 'leading while following' marking" class="img-fluid">
         </div>
       </div>
